fix overflow-x

--- a/main.css
+++ b/main.css
@@ -1,5 +1,12 @@
+html,body{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
 /* 	The content is clipped - and no
-scrolling mechanism is provided */
+scrolling mechanism is provided for horizontal axis*/
 .overflow-x-hidden{
     overflow-x: hidden;
 }
@@ -26,6 +33,7 @@ be provided for overflowing boxes */
 } */
 
 
+
 p {
     font-family: sans-serif, Arial, Helvetica,
     'Times New Roman', Times, serif;
@@ -46,7 +54,9 @@ p {
     /* font-size: ; */
 }
 
-
+.leading-tight{
+    line-height: 1.6;
+}
 
 .head{
     background-color: #00948E;
@@ -57,8 +67,9 @@ p {
     position: sticky;
     top: 0px;
     background-color: #B1A8B9;
-    padding: 15px;
+    padding: 10px;
     height: 30px;
+    width: 100%;
     overflow: hidden;
 }
 
@@ -93,6 +104,10 @@ p {
 
 .transparant-5{
     opacity: 0.5;
+}
+
+.opacity-75{
+    opacity: 0.85;
 }
 
 .rotate-5{
